[gd_scene load_steps=7 format=3 uid="uid://c4lsuwvd1l5g7"]

[ext_resource type="Script" path="res://scripts/entities/enemies/devil.gd" id="1_io2t5"]
[ext_resource type="Texture2D" uid="uid://bk6cc8gs3cko6" path="res://textures/entities/devil/body.png" id="2_1j7hy"]
[ext_resource type="Texture2D" uid="uid://oi1kyncdjsog" path="res://textures/entities/devil/jetpack.png" id="2_7cvsr"]
[ext_resource type="Texture2D" uid="uid://d10evvr63isa8" path="res://textures/entities/devil/lower_arm.png" id="2_cdspi"]
[ext_resource type="Texture2D" uid="uid://dry6y4fl554il" path="res://textures/entities/devil/head.png" id="3_rh5tu"]
[ext_resource type="Texture2D" uid="uid://blxivw8vwaoyu" path="res://textures/entities/devil/upper_arm.png" id="5_u4fdb"]

[node name="devil" type="CharacterBody2D"]
script = ExtResource("1_io2t5")
metadata/_edit_horizontal_guides_ = []

[node name="parts" type="Node2D" parent="."]

[node name="body" type="Sprite2D" parent="parts"]
position = Vector2(0, 12)
texture = ExtResource("2_1j7hy")
offset = Vector2(0, -4)

[node name="head" type="Sprite2D" parent="parts/body"]
position = Vector2(0, -10)
texture = ExtResource("3_rh5tu")
offset = Vector2(0, -2)

[node name="left_jet" type="Sprite2D" parent="parts/body"]
position = Vector2(-2, -7)
texture = ExtResource("2_7cvsr")
offset = Vector2(0, 2)

[node name="right_jet" type="Sprite2D" parent="parts/body"]
position = Vector2(2, -7)
texture = ExtResource("2_7cvsr")
offset = Vector2(0, 2)

[node name="lower_arm" type="Sprite2D" parent="parts"]
position = Vector2(0, 13)
texture = ExtResource("2_cdspi")
offset = Vector2(8, 0)

[node name="upper_arm" type="Sprite2D" parent="parts"]
position = Vector2(17, 13)
texture = ExtResource("5_u4fdb")
offset = Vector2(5, 0)
